--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.1" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_1.xsd">
-<!--        <session-config>
+    <!--        <session-config>
     <session-timeout>30</session-timeout>   Session expires after 30 minutes of inactivity 
 </session-config>-->
     <display-name>Mega City Cab Booking System</display-name>
@@ -32,6 +32,22 @@
         <servlet-name>AdminDashboardServlet</servlet-name>
         <servlet-class>Controller.AdminDashboardServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DriverServlet</servlet-name>
+        <servlet-class>Controller.DriverServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BookingServlet</servlet-name>
+        <servlet-class>Controller.BookingServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>GetLocationsServlet</servlet-name>
+        <servlet-class>Controller.GetLocationsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FareCalculatorServlet</servlet-name>
+        <servlet-class>Controller.FareCalculatorServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -55,6 +71,22 @@
     <servlet-mapping>
         <servlet-name>AdminDashboardServlet</servlet-name>
         <url-pattern>/AdminDashboardServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DriverServlet</servlet-name>
+        <url-pattern>/DriverServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BookingServlet</servlet-name>
+        <url-pattern>/BookingServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetLocationsServlet</servlet-name>
+        <url-pattern>/GetLocationsServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FareCalculatorServlet</servlet-name>
+        <url-pattern>/FareCalculatorServlet</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>Main.jsp</welcome-file>
