--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,6 +48,22 @@
         <servlet-name>FareCalculatorServlet</servlet-name>
         <servlet-class>Controller.FareCalculatorServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProfileServlet</servlet-name>
+        <servlet-class>Controller.ProfileServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CRUDUserServlet</servlet-name>
+        <servlet-class>Controller.CRUDUserServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CRUDDriverServlet</servlet-name>
+        <servlet-class>Controller.CRUDDriverServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManageVehicleTypeServlet</servlet-name>
+        <servlet-class>Controller.ManageVehicleTypeServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -87,6 +103,22 @@
     <servlet-mapping>
         <servlet-name>FareCalculatorServlet</servlet-name>
         <url-pattern>/FareCalculatorServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProfileServlet</servlet-name>
+        <url-pattern>/ProfileServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CRUDUserServlet</servlet-name>
+        <url-pattern>/CRUDUserServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CRUDDriverServlet</servlet-name>
+        <url-pattern>/CRUDDriverServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManageVehicleTypeServlet</servlet-name>
+        <url-pattern>/ManageVehicleTypeServlet</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>Main.jsp</welcome-file>
