--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${libs.junit_5.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -48,7 +49,8 @@ javac.source=20
 javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
