--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${libs.junit_5.classpath}
+    ${libs.junit_5.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -50,7 +52,9 @@ javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${libs.junit_5.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
